--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="fa">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link href="assets/images/favicon.png" rel="icon" />
+    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>باشگاه خدمات اجتماعی پالایشگاه</title>
   </head>
